# grafika_compt

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  codeblok.cpp  main.cpp  setup.bat
coursework/: README.md  pertemuan2.cpp
